--- a/EG.SucursalesQuala.Application/EG.SucursalesQuala.Application.csproj
+++ b/EG.SucursalesQuala.Application/EG.SucursalesQuala.Application.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.10" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.14.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EG.SucursalesQuala.Domain\EG.SucursalesQuala.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
