--- a/EG.SucursalesQuala.Infrastructure/EG.SucursalesQuala.Infrastructure.csproj
+++ b/EG.SucursalesQuala.Infrastructure/EG.SucursalesQuala.Infrastructure.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.66" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EG.SucursalesQuala.Domain\EG.SucursalesQuala.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
