Se cambia conexion

--- a/EG.SucursalesQuala.API/appsettings.json
+++ b/EG.SucursalesQuala.API/appsettings.json
@@ -1,7 +1,12 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=TestDB;Trusted_Connection=true;TrustServerCertificate=true;"
+
+    //Conexion local
+    //"DefaultConnection": "Server=localhost;Database=TestDB;Trusted_Connection=true;TrustServerCertificate=true;",
+
+    //Conexion servidor remoto
+    "DefaultConnection": "Data Source=ins-dllo-test-01.public.33e082952ab4.database.windows.net,3342; Database=TestDB;User Id=prueba; Password=pruebaconcepto; Encrypt=False;MultipleActiveResultSets=True;"
   },
   "Jwt": {
     "Audience": "EG.SucursalesQualaClients",
